# bulletin_board_manager_tg_bot

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  bot.py  build.sh  commands.py  config.py  example.config.ini  main.py  nodemon.json  package.json  pull-and-restart.sh  pyproject.toml  requirements.txt  run-prod.sh  run.watch.sh  services.py  tmp.py  unmarked_messages
app/: bot.py  commands.py  example.config.ini  main.py  pyproject.toml
app/db/: admins.json  tags.json
app/handlers/: admin_commands.py  admin_configs.py  group.py  private.py
app/utils/: config.py  database.py  helpers.py  logger.py  states.py
app/utils/premoderation/: helpers.py  premoderation.py
app/utils/premoderation/handlers/: __init__.py  banned.py  emoji.py  length.py  limits.py  whitelist.py
handlers/: admin_commands.py  admin_configs.py  group.py  private.py
utils/: database.py  helpers.py  logger.py  states.py
