[tool.poetry]
name = "business-chatbot"
version = "0.1.0"
description = ""
authors = ["nillkizz <alx.n.smith@gmail.com>"]
readme = "README.md"
packages = [{include = "business_chatbot"}]

[tool.poetry.dependencies]
python = "^3.10"
pyTelegramBotAPI = "^4.7.0"
tinydb = "^4.7.0"
aiohttp = "^3.8.3"
asyncio = "^3.4.3"
advertools = "^0.13.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"
pylint = "^2.15.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
