[tool.poetry]
name = "bulletin_board_manager_tg_bot"
version = "0.1.0"
description = ""
authors = ["alx_n_smith <alx.n.smith@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyTelegramBotAPI = "4.7.0"
tinydb = "4.7.0"
aiohttp = "3.8.3"
asyncio = "3.4.3"
emoji = "^2.1.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"
pylint = "^2.15.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
